@@ -2,13 +2,16 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.321 2006-12-11 12:01:10 martin Exp $
+# $Id: CHANGES,v 1.322 2006-12-11 13:53:43 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 2.1.4 (2006/??/??)
+ - (2006/12/11) added config param for shown my queues/custom queues
+    in preferences, default are shown all ro queues, see also
+    PreferencesGroups###CustomQueue under Frontend::Agent::Preferences
  - (2006/12/11) fixed ldap sync of agents attributes - invalid agents
     are not longer synced to valid if ldap auth was successfully, the
     invalid agent will still be invalid
@@ -20,7 +23,6 @@
  - (2006/12/08) fixed bug #1524 - ticketFreeText Fields 9-16 not displayed
     at CustomerTicketPrint and CustomerTicketZoom
  - (2006/12/07) fixed bug #1359 - acl problem if '' is used in properties to match
- - (2006/12/07) fixed acl problem if '' is used in properties to match
  - (2006/12/07) fixed bug #1031 - scripts/backup.pl fails in mysqldump with
     encrypted database password
  - (2006/12/07) fixed bug #1378 - Got no MainObject! in bin/otrs.getTicketThread
